--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository: "hasanulkabir-md/hasanulkabir-md.github.io"
 author:
   # Biographic information
 author:
-  avatar           : "photo.jpg"   # we’ll upload this file next
+  avatar           : "profile.png"   # we’ll upload this file next
   name             : "Md. Hasanul Kabir"
   bio              : "Master’s student in Computer Science & Technology at Nanjing Normal University. Research on video-based dynamic obstacle avoidance using deep reinforcement learning for autonomous robots."
   location         : "Nanjing, China"
