--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /projects/
 
   - title: "Publications"
-    url: /Publications/
+    url: /publications/
 
   - title: "Curriculum Vitae"
     url: /cv/
