--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,9 @@ main:
 
   - title: "Publications"
     url: /publications/
+    
+  - title: "Blog Posts"
+    url: /year-archive/
 
   - title: "Curriculum Vitae"
     url: /cv/
