--- a/_config.yml
+++ b/_config.yml
@@ -30,14 +30,14 @@ author:
   email            : "hasanul.kabir09@gmail.com"
 
   github           : "hasanulkabir-md"
-  googlescholar    :
-  orcid            :
-  linkedin         :
-  twitter          :
+  googlescholar    : "https://scholar.google.com/citations?user=xG7C5mcAAAAJ&hl=en"
+  orcid            : "https://orcid.org/0009-0004-3180-819X"
+  linkedin         : "https://www.linkedin.com/in/hasanulkabir-md/"
+  twitter          : "hasanulkabir-md"
 
 
   # Academic websites
-  academia         : # URL
+  academia         : "https://njnu.academia.edu/MdHasanulKabir"
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=xG7C5mcAAAAJ&hl=en"
   inspire-hep      : # URL
@@ -52,7 +52,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "https://github.com/hasanulkabir-md"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -67,7 +67,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "https://www.linkedin.com/in/hasanulkabir-md/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
