--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "hasanulkabir-md"
+  twitter          : "https://x.com/hasanulkabir_md?s=21"
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
