--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
 title: "Md Hasanul Kabir"
 name: &name "Md Hasanul Kabir"
-description: "Md Hasanul Kabir – Master's student at Nanjing Normal University working on AI, deep reinforcement learning and autonomous robots."
+description: ""
 url: "https://hasanulkabir-md.github.io"
 baseurl: ""
 repository: "hasanulkabir-md/hasanulkabir-md.github.io"
