--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,5 +17,8 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
 
-  - title: "Curriculum Vitae"
+  - title: "CV"
     url: /cv/
+
+  - title: "CV"
+    url: /cv-json/
