--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,8 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  linkedin         : "https://www.linkedin.com/in/hasanulkabir-md/"
-  twitter          : "hasanulkabir-md"
+  linkedin         : #"https://www.linkedin.com/in/hasanulkabir-md/"
+  twitter          : #"hasanulkabir-md"
   artstation       : # Username
   bluesky          : #"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
@@ -63,7 +63,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/hasanulkabir-md/"
+  linkedin         : #"https://www.linkedin.com/in/hasanulkabir-md/"
   mastodon         : # URL
   medium           : "https://medium.com/@hasanulkabir_md"
   pinterest        : # Username
@@ -71,7 +71,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "https://x.com/hasanulkabir_md?s=21"
+  twitter          : #"https://x.com/hasanulkabir_md?s=21"
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
