--- a/_config.yml
+++ b/_config.yml
@@ -46,13 +46,13 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/hasanulkabir-md"
+  github           : #"https://github.com/hasanulkabir-md"
   kaggle           : "https://www.kaggle.com/mdhasanulkabir"
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  linkedin         : #"https://www.linkedin.com/in/hasanulkabir-md/"
-  twitter          : #"hasanulkabir-md"
+  linkedin         : #
+  twitter          : #
   artstation       : # Username
   bluesky          : #"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
