--- a/_config.yml
+++ b/_config.yml
@@ -62,9 +62,9 @@ repository: "hasanulkabir-md/hasanulkabir-md.github.io"
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : #"https://www.linkedin.com/in/hasanulkabir-md/"
+  linkedin         : #
   mastodon         : # URL
-  medium           : "https://medium.com/@hasanulkabir_md"
+  medium           : #
   pinterest        : # Username
   soundcloud       : # Username
   steam            : # Username
