--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title_separator          : "-"
 description: "Hasanul Kabir's academic portfolio"
 url: "https://hasanulkabir-md.github.io"
 baseurl: ""
-repository: "https://hasanulkabir-md.github.io"
+repository: "hasanulkabir-md/hasanulkabir-md.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
