--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,6 +8,7 @@ Name Name:
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
   google_plus : "Name"
+  github: hasanulkabir-md
 
 Name2 Name2:
   name        : "Name2 Name2"
