--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author:
   bitbucket        :
   codepen          :
   dribbble         :
-  github           : "https://github.com/hasanulkabir-md"
+  github           : "hasanulkabir-md"
   kaggle           : "https://www.kaggle.com/mdhasanulkabir"
   stackoverflow    :
 
